--- a/src/components/Benefits/Benefits.css
+++ b/src/components/Benefits/Benefits.css
@@ -36,4 +36,41 @@ body {
     color: #000000;
 }
 
+.you_get {
+    font-weight: 700;
+    font-size: 30px;
+    line-height: 35px;
+    letter-spacing: 0.08em;
+    color: #000000;
+    text-align: center;
+}
+
+.inner_box {
+    width: 120px;
+    height: 120px;
+    background-color: #000000;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: 100px;
+    border-radius: 4px;
+}
+
+.sapien {
+    font-weight: 600;
+    font-size: 17px;
+    line-height: 23px;
+    text-align: center;
+    color: #000000;
+    margin-top: 10px;
+}
+
+.pharetra {
+    font-weight: 400;
+    font-size: 15px;
+    line-height: 20px;
+    text-align: center;
+    color: rgba(0, 0, 0, 0.9);
+}
+
 
