--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -32,6 +32,10 @@ body {
     margin-left: 25px;
 }
 
+.line_2 {
+    margin-top: 10px;
+}
+
 .avatar {
     margin: 18px 0 0 128px;
 }
@@ -56,5 +60,19 @@ body {
     line-height: 28px;
     color: #000000;
     margin-top: 30px;
-    margin-bottom: 30px;
+    margin-bottom: 50px;
+}
+
+.avatar_1 {
+    /* width: 152.83px;
+    height: 131px; */
+    margin: 50px 0 0 40px;
+}
+
+.avatar_2 {
+    margin: 30px 0 0 150px;
+}
+
+.avatar_3 {
+    margin: 30px 0 0 70px;
 }
