--- a/src/components/Benefits/BenefitsH.css
+++ b/src/components/Benefits/BenefitsH.css
@@ -16,17 +16,22 @@ body {
 .div_column {
     column-count: 2;
     column-gap: 15px;
-    margin-top: 20px;
+    margin-top: 25px;
 }
 
 .check {
     margin-bottom: -2px;
 }
 
+.w_vector {
+    width: 110px;
+    height: 110px;
+}
+
 .div_column_2 {
     column-count: 2;
     column-gap: 15px;
-    margin: 20px 0 0 8px;
+    margin: 23px 0 0 8px;
 }
 
 .div_column_text {
@@ -56,13 +61,18 @@ body {
     border-radius: 4px;
 }
 
+.sw_vector {
+    width: 42.58px;
+    height: 42.58px;
+}
+
 .sapien {
     font-weight: 600;
     font-size: 17px;
     line-height: 23px;
     text-align: center;
     color: #000000;
-    margin-top: 10px;
+    margin-top: 19px;
 }
 
 .pharetra {
@@ -71,6 +81,7 @@ body {
     line-height: 20px;
     text-align: center;
     color: rgba(0, 0, 0, 0.9);
+    margin-top: 3px;
 }
 
 
