--- a/src/components/Hero/HeroH.css
+++ b/src/components/Hero/HeroH.css
@@ -33,11 +33,12 @@ body {
 }
 
 .line_2 {
-    margin-top: 10px;
+    margin-top: 36px;
 }
 
-.avatar {
-    margin: 18px 0 0 128px;
+.avatar_mobile {
+    width: 90px;
+    height: 90px;
 }
 
 .hero_text_web {
@@ -51,7 +52,7 @@ body {
     line-height: 132.4%;
     letter-spacing: 0.03em;
     color: #000000;
-    padding-top: 50px;
+    padding-top: 82px;
 }
 
 .lorem_web {
@@ -63,16 +64,19 @@ body {
     margin-bottom: 50px;
 }
 
+.avatar_web {
+    width: 152.83px;
+    height: 131px;
+}
+
 .avatar_1 {
-    /* width: 152.83px;
-    height: 131px; */
-    margin: 50px 0 0 40px;
+    margin: 36px 0 0 23px;
 }
 
 .avatar_2 {
-    margin: 30px 0 0 150px;
+    margin: 21.49px 0 0 197.33px;
 }
 
 .avatar_3 {
-    margin: 30px 0 0 70px;
+    margin: 21.49px 0 0 43.97px;
 }
