--- a/src/components/About/OurStory.css
+++ b/src/components/About/OurStory.css
@@ -69,7 +69,7 @@ body {
 }
 
 .div_lorem_web {
-    width: 516px;
+    width: 35vw;
     height: 234px;
     margin-top: 56px;
     margin-bottom: 26px;
