--- a/src/components/Benefits/Benefits.css
+++ b/src/components/Benefits/Benefits.css
@@ -21,6 +21,7 @@ body {
 
 .check {
     margin-bottom: -2px;
+    margin-right: 5px;
 }
 
 .w_vector {
@@ -51,13 +52,13 @@ body {
 }
 
 .inner_box {
-    width: 120px;
+    width: 8vw;
     height: 120px;
     background-color: #000000;
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-left: 100px;
+    margin-left: 90px;
     border-radius: 4px;
 }
 
@@ -77,11 +78,21 @@ body {
 
 .pharetra {
     font-weight: 400;
-    font-size: 15px;
+    font-size: 14px;
     line-height: 20px;
     text-align: center;
     color: rgba(0, 0, 0, 0.9);
     margin-top: 3px;
 }
 
+@media screen and (max-width: 320px) {
+    .div_column_text {
+        font-weight: 400;
+        font-size: 13px;
+    }
+}
+
+@media screen and (min-width: 768x) {
+    
+}
 
