--- a/src/components/About/OurStory.css
+++ b/src/components/About/OurStory.css
@@ -12,7 +12,7 @@ body {
     color: #ffffff; 
 }
 
-.our {
+.ours {
     font-weight: 700;
     font-size: 20px;
     line-height: 23px;
@@ -39,7 +39,7 @@ body {
     margin-top: 28px;
 }
 
-.p_lorem {
+.p_Lorem {
     font-weight: 400;
     font-size: 15px;
     line-height: 20px;
