--- a/src/components/Services/Services.css
+++ b/src/components/Services/Services.css
@@ -7,6 +7,15 @@ body {
 
 .our {
     font-weight: 700;
+    font-size: 20px;
+    line-height: 23px;
+    color: #000000;
+    margin-left: 30px;
+    margin-bottom: 5px;
+}
+
+.our_web {
+    font-weight: 700;
     font-size: 32px;
     line-height: 38px;
 }
