--- a/src/components/About/OurStory.css
+++ b/src/components/About/OurStory.css
@@ -47,12 +47,12 @@ body {
 }
 
 .w_vector_1 {
-    width: 77px;
+    width: 20vw;
     height: 77px;
 }
 
 .w_vector_2 {
-    width: 128px;
+    width: 34vw;
     height: 128px;
 }
 
@@ -69,7 +69,7 @@ body {
 }
 
 .div_lorem_web {
-    width: 35vw;
+    width: 50%;
     height: 234px;
     margin-top: 56px;
     margin-bottom: 26px;
@@ -81,14 +81,20 @@ body {
     font-size: 17px;
     line-height: 23px;
     color: #FFFFFF;
+    text-align: justify;
 }
 
 .w_vector_web_1 {
-    width: 157.56;
+    width: 100%;
     height: 157.56;
 }
 
 .w_vector_web_2 {
-    width: 261.93px;
-    height: 261.93px;
+    width: 90%;
+    height: 270px;
+}
+
+
+@media only screen and (min-width: 900px) {
+    
 }
