--- a/src/components/Benefits/Benefits.css
+++ b/src/components/Benefits/Benefits.css
@@ -25,7 +25,7 @@ body {
 }
 
 .w_vector {
-    width: 110px;
+    width: 30vw;
     height: 110px;
 }
 
@@ -63,7 +63,7 @@ body {
 }
 
 .sw_vector {
-    width: 42.58px;
+    width: 35%;
     height: 42.58px;
 }
 
