--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -37,12 +37,12 @@ body {
 }
 
 .avatar_mobile {
-    width: 90px;
+    width: 23vw;
     height: 90px;
 }
 
 .hero_text_web {
-    width: 31.5vw;
+    width: 53%;
     height: 300px;
     padding-right: 10px;
 }
@@ -71,29 +71,30 @@ body {
     color: #000000;
     margin-top: 30px;
     margin-bottom: 50px;
+    text-align: justify;
 }
 
 .avatar_web {
-    width: 152.83px;
+    width: 10vw;
     height: 131px;
 }
 
 .avatar_1 {
     position: absolute;
-    top: 270px;
-    left: 580px;
+    top: 35%;
+    left: 39%;
 }
 
 .avatar_2 {
     position: absolute;
-    top: 415px;
-    left: 740px;
+    top: 52%;
+    left: 50.5%;
 }
 
 .avatar_3 {
     position: absolute;
-    top: 580px;
-    left: 650px;
+    top: 75%;
+    left: 44%;
 }
 
 
@@ -112,4 +113,42 @@ body {
     .line {
         margin-left: 5px;
     }
+}
+
+@media only screen and (min-width: 900px) {
+    .big_text_web {
+        font-weight: 700;
+        font-size: 30px;
+        line-height: 132.4%;
+        letter-spacing: 0.03em;
+        color: #000000;
+        padding-top: 82px;
+    }
+
+    .big_text_web_2 {
+        font-weight: 700;
+        font-size: 30px;
+        line-height: 132.4%;
+        letter-spacing: 0.03em;
+        color: #000000;
+    }
+
+    .avatar_1 {
+        position: absolute;
+        top: 30%;
+        left: 39%;
+    }
+    
+    .avatar_2 {
+        position: absolute;
+        top: 47%;
+        left: 50.5%;
+    }
+    
+    .avatar_3 {
+        position: absolute;
+        top: 70%;
+        left: 44%;
+    }
+
 }
