--- a/src/components/About/OurStory.css
+++ b/src/components/About/OurStory.css
@@ -84,17 +84,75 @@ body {
     text-align: justify;
 }
 
+.div_w_vector_web_1 {
+    width: 8%;
+    height: 157.56;
+    position: absolute;
+    top: 190%;
+    left: 63%;
+}
+
 .w_vector_web_1 {
     width: 100%;
-    height: 157.56;
+}
+
+.div_w_vector_web_2{
+    width: 20%;
+    height: 300px;
+    background-color: #121212;
+    border-radius: 25px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    top: 196%;
+    left: 45%;
 }
 
 .w_vector_web_2 {
     width: 90%;
-    height: 270px;
+}
+
+.div_w_vector_web_3 {
+    width: 8%;
+    height: 157.56;
+    position: absolute;
+    top: 240%;
+    left: 66%;
+}
+
+.w_vector_web_3 {
+    width: 100%;
 }
 
 
-@media only screen and (min-width: 900px) {
-    
+
+@media only screen and (min-width: 900px) and (max-width: 1200px){
+    .story_button {
+        margin-top: 80px;
+    } 
+
+    .div_w_vector_web_1 {
+        top: 225%;
+    }
+
+    .div_w_vector_web_2 {
+        top: 230%;
+    }
+
+    .div_w_vector_web_3 {
+        top: 270%;
+    }
+
+    .our_web {
+        font-size: 24px;
+    }
+
+    .div_lorem_web {
+        margin-top: 25px;
+    }
+
+    .p_lorem_web {
+        font-size: 14px;
+    }
 }
