--- a/src/components/CallToAction/CallToAction.css
+++ b/src/components/CallToAction/CallToAction.css
@@ -76,3 +76,26 @@ body {
     color: #FFFFFF;
     margin-top: 72px;
 }
+
+@media only screen and (min-width: 900px) and (max-width: 1200px) {
+    .cta_ready_web {
+        font-size: 24px;
+    }
+
+    .cta_question, .cta_ready_web {
+        font-size: 24px;
+    }
+
+    .cta_need  {
+        font-size: 16px;
+    }
+
+    .cta_call, .cta_call_2 {
+        font-size: 16px;
+    }
+
+    .cta_book_web {
+        font-size: 18px;
+    }
+    
+}
