--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -75,23 +75,28 @@ body {
 }
 
 .avatar_web {
-    width: 10vw;
-    height: 131px;
+    width: 100%;
 }
 
 .avatar_1 {
+    width: 9%;
+    height: 131px;
     position: absolute;
     top: 35%;
     left: 39%;
 }
 
 .avatar_2 {
+    width: 9%;
+    height: 131px;
     position: absolute;
     top: 52%;
     left: 50.5%;
 }
 
 .avatar_3 {
+    width: 9%;
+    height: 131px;
     position: absolute;
     top: 75%;
     left: 44%;
@@ -100,7 +105,6 @@ body {
 
 @media screen and (max-width: 320px) {
     .hero_text_mobile {
-        width: 55vw;
         height: 150px;
         margin-bottom: 50px;
         padding-top: 15px;
@@ -114,41 +118,30 @@ body {
         margin-left: 5px;
     }
 }
+@media only screen and (min-width: 900px) and (max-width: 1200px) {
 
-@media only screen and (min-width: 900px) {
     .big_text_web {
-        font-weight: 700;
         font-size: 30px;
-        line-height: 132.4%;
-        letter-spacing: 0.03em;
-        color: #000000;
-        padding-top: 82px;
     }
 
     .big_text_web_2 {
-        font-weight: 700;
         font-size: 30px;
-        line-height: 132.4%;
-        letter-spacing: 0.03em;
-        color: #000000;
     }
 
     .avatar_1 {
-        position: absolute;
-        top: 30%;
-        left: 39%;
+        top: 40%;
     }
     
     .avatar_2 {
-        position: absolute;
-        top: 47%;
-        left: 50.5%;
+        top: 60%;
     }
     
     .avatar_3 {
-        position: absolute;
-        top: 70%;
-        left: 44%;
+        top: 85%;
+    }
+
+    .lorem_web {
+        font-size: 22px;
     }
 
 }
