--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -1,5 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;500;600;700;800;900&display=swap');
 
 body {
-    max-width: 100%;
+    font-family: 'Raleway';
+    font-style: normal;
 }
+
+@media only screen and (min-width: 900px) and (max-width: 1200px) {}
