--- a/src/App.css
+++ b/src/App.css
@@ -14,4 +14,14 @@
   margin: 0px 5px;
 }
 
+.span2{
+  color: #ffffff;
+  font-weight: 700;
+  font-size: 50px;
+}
+.orangeSpan{
+  color: #ffffff;
+  border-radius: 4px;
+  background-color: #F9A020;
+}
 
