--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,8 @@
   background-color: #4264CC;
   border-radius: 5px;
   color: #ffffff;
-  padding: 3px;
+  padding: 0 3px;
+  margin: 0 2px;
 }
 
 .span2{
@@ -20,7 +21,28 @@
 }
 .orangeSpan{
   color: #ffffff;
+  border-radius: 5px;
+  background-color: #f9a020;
+}
+.orangeSpan{
+  color: #ffffff;
   border-radius: 4px;
   background-color: #F9A020;
+}
+
+
+.slider {
+  display: flex;
+  align-items: center;
+
+  opacity: 0;
+  transform: scale(80%);
+  transition: 1.5s;
+}
+
+.slider--zoom {
+  opacity: 1;
+  transform: scale(100%);
+  transition: 1.5s;
 }
 
